--- a/lit.bib
+++ b/lit.bib
@@ -242,20 +242,21 @@
   timestamp = {2014.06.18}
 }
 
-@ARTICLE{AL14b,
-  author = {Berger, U. and Lawrence, A. and Nordvall-Forsberg, F. and Sei},
-  title = {Extracting Verified Decision Procedures: DPLL and Resolution},
-  journal = {(To appear in) Logic Methods in Computer Science},
-  year = {2014},
-  owner = {andylawrence},
-  timestamp = {2014.08.04}
-}
-
 @ARTICLE{AL13a,
   author = {Berger, U. and Lawrence, A. and Nordvall-Forsberg, F. and Seisenberger,
 	M.},
   title = {Extracting Verified Decision Procedures: {DPLL} and Resolution},
   journal = {In preparation}
+}
+
+@ARTICLE{AL14b,
+  author = {Berger, U. and Lawrence, A. and Nordvall-Forsberg, F. and Seisenberger,
+	M.},
+  title = {Extracting Verified Decision Procedures: {DPLL} and Resolution},
+  journal = {(To appear in) Logic Methods in Computer Science},
+  year = {2014},
+  owner = {andylawrence},
+  timestamp = {2014.08.04}
 }
 
 @ARTICLE{AL13c,
@@ -476,6 +477,20 @@
   number = {1},
   owner = {andylawrence},
   timestamp = {2014.07.31}
+}
+
+@INPROCEEDINGS{EC01b,
+  author = {Clarke, E. and Grumberg, O. and Jha, S. and Lu, Y. and Veith, H.},
+  title = {Progress on the State Explosion Problem in Model Checking},
+  booktitle = {Informatics: 10 Years Back, 10 Years Ahead},
+  year = {2001},
+  editor = {Wilhelm, R.},
+  volume = {2000},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {176--194},
+  publisher = {Springer Berlin / Heidelberg},
+  owner = {andylawrence},
+  timestamp = {2014.08.12}
 }
 
 @ARTICLE{EC97,
@@ -1212,7 +1227,7 @@
 
 @INPROCEEDINGS{MS96,
   author = {Marques-Silva, J. P. and Sakallah, K. A.},
-  title = {GRASP-A New Search Algorithm for Satisfiability},
+  title = {{GRASP}-A New Search Algorithm for Satisfiability},
   booktitle = {International Conference on Computer-Aided Design},
   year = {1996},
   pages = {220--227},
@@ -1399,6 +1414,20 @@
   series = {TPHOLs'07},
   pages = {232--245},
   publisher = {Springer-Verlag}
+}
+
+@INPROCEEDINGS{RP09,
+  author = {Pel{\'a}nek, R.},
+  title = {Fighting State Space Explosion: Review and Evaluation},
+  booktitle = {Formal Methods for Industrial Critical Systems},
+  year = {2009},
+  editor = {Cofer, D. and Fantechi, A.},
+  volume = {5596},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {37--52},
+  publisher = {Springer Berlin},
+  owner = {andylawrence},
+  timestamp = {2014.08.12}
 }
 
 @INPROCEEDINGS{DP94,
