--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -182,7 +182,7 @@ indstep_M(\phi) &:= \forall s,s' \in S. R(s, s') \to s \models \phi  \to s' \mod
 \end{mydef}
 \medskip
 \subsection*{Bounded Model Checking}
-One of the most important model checking techniques in terms of industrial applications is bounded model checking. All possible paths through the system are safety property checked up to a certain bound. This approach is most useful for falsification checking i.e. finding errors and their causes. It is scalable to industrial applications as they typically exhibit all of their possible behaviours after a short number of time steps. We present a formalisation that is geared towards the application of SAT solvers~\cite{EC01}. In the following we make use of the abbreviation $\sseq{n}{m} \models \phi \leftrightarrow s_n \models \phi \wedge \ldots \wedge  s_m \models \phi$ when writing that a formula holds $\phi$ in a sequence of states $\sseq{n}{m}$.
+One of the most important model checking techniques in terms of industrial applications is bounded model checking. All possible paths through the system are safety property checked up to a certain bound. This approach is most useful for falsification checking i.e. finding errors and their causes. It is scalable to industrial applications as they typically exhibit all of their possible behaviours after a short number of time steps. We present a formalisation that is geared towards the application of SAT solvers~\cite{EC01}. In the following we make use of the abbreviation $\sseq{n}{m} \models \phi \leftrightarrow s_n \models \phi \wedge \ldots \wedge  s_m \models \phi$ when writing that a formula $\phi$ holds in a sequence of states $\sseq{n}{m}$.
 \medskip
 \begin{mydef}[Bounded Model Checking]
 Given a transition system $M$, a safety property $\phi$ and a bound $k$ we define bounded model checking $bmc_M(\phi,k)$ as follows:
@@ -194,34 +194,35 @@ $$bmc_M(\phi,k):= \forall \sseq{0}{k} \subseteq S \to  path_R(\sseq{0}{k}) \to S
 
 \section{On-the-fly Model Checking of Linear Temporal Logic Properties}
 The Maude LTL model checker performs on-the-fly model checking~\cite{CC91} of an LTL property $\phi$.
-This process of mode checking linear temporal logic involves first  negating the linear temporal  logic property, placing it in negation normal form and then constructing a B{\"u}chi automata for that property that accepts the language of counter examples $\neg \phi$. The product of the Buchi automata and the state transition system is constructed and a double depth first search is applied to search for strongly connected components with a state in which $\neg \phi$ holds.
+This process of model checking linear temporal logic involves first  negating the linear temporal  logic property, placing it in negation normal form and then constructing a B{\"u}chi automaton for that property that accepts the language of counterexamples $\neg \phi$. The product of the B{\"u}chi automata and the state transition system is constructed and a double depth first search is applied to search for strongly connected components with a state in which $\neg \phi$ holds.
 
 \subsection{B{\"u}chi Automata}
 \newcommand{\Buchi}{B{\"u}chi\xspace}
-Most applications of model checking typically search for a finite counter example trace in the set of infinite traces of the system. The class of automatons which can accept infinite words is called the $\omega$-automata and the simplest class $\omega-automata$ is \Buchi automata. These \Buchi are a minor modification of finite state automaton in that they have a finite alphabet and a finite set of states but instead of a set of final states the automata have a set of \emph{accepting states}.
+Most applications of model checking typically search for a finite counterexample trace in the set of infinite traces of the system. The class of automatons which can accept infinite words is called the $\omega$-automata and the simplest class $\omega-automata$ is \Buchi automata. These \Buchi automata are a minor modification of finite state automata in that they have a finite alphabet and a finite set of states but instead of a set of final states the automata have a set of \emph{accepting states}.
 
 \begin{mydef}[B{\"u}chi Automata]
 We define a \Buchi automaton $A$ is a five-tuple $(L, S,T,S_0, F)$ where:
 \item $L$ is a finite alphabet
 \item $S$ is a finite set of states
-\item $T \subseteq S \times L \times S$ a transition relation
-\item $S_0 \subseteq S$ a set of initial states 
+\item $T \subseteq S \times L \times S$ is a transition relation
+\item $S_0 \subseteq S$ is a set of initial states 
 \item $F \subseteq S$ is an acceptance condition. The automaton A accepts only the infinite runs which contain at least one state occurring in $F$
 \end{mydef}
 
-The translation of the LTL property into a \Buchi automata takes 3 steps following the approach of Gastin and Oddoux~\cite{PG01}:
+The translation of the LTL property into a \Buchi automaton takes three steps following the approach of Gastin and Oddoux~\cite{PG01}:
 
 \begin{enumerate}
-\item Construct a very weak alternating (VWA) automata
-\item Convert this VWA automata into a generalized \Buchi automata
-\item Convert the generalized \Buchi automata into a standard \Buchi automata
+\item Construct a very weak alternating (VWA) automaton
+\item Convert this VWA automata into a generalized \Buchi automaton
+\item Convert the generalized \Buchi automata into a standard \Buchi automaton
 \end{enumerate}
 
-At every step the automaton is simplified by removing unreachable states, subsumed transitions and combining equivalent states. In order to perform model checking we need to be able to find accepting runs of the automata since these accepting runs are infinite they must contain a loop through the automata. Therefore the model checking algorithm partitions the \Buchi automaton into its strongly connected components. A set of states in a \Buchi automaton is a \emph{strongly connected component} (SCC) if and only if every state in that set is reachable from every other state in that set. 
+At every step the automaton is simplified by removing unreachable states and subsumed transitions and combining equivalent states. In order to perform model checking we need to be able to find accepting runs of the automaton. Since these accepting runs are infinite they must contain a loop through the automaton. Therefore the model checking algorithm partitions the \Buchi automaton into its strongly connected components. A set of states in a \Buchi automaton is a \emph{strongly connected component} (SCC) if and only if every state in that set is reachable from every other state in that set. 
 
 The model checking algorithm performs a search for strongly connected components and tests to see whether the the acceptance condition is empty.
 
-Fair strongly connected component?
+\textbf{Note to self: Define double depth first search and possibly fairly strongly connected components}
+
 
 
 
